2003-04-24  Dave Jones <davej@codemonkey.org.uk>

	* events/x86-64.hammer.events:
	* events/x86-64.hammer.unit_masks: typo fixes from AMD.

2003-04-15  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386-ht.events: all events allow only one counter, remove
	  three events due to ESCR restricton.
	* events/i386.events: add some comments.

	* module/x86/op_model_p4.c: synch with linux 2.5 mainline
	  - except events CTR_BPU_0 all virtual counter was not working.
	  - Prevents a segfault when using incorrect counter number.
	  - ESCR event select is 6 bits length not 5.
	  - Don't fail silently in p4_setup_ctrs().
	* module/x86/op_msr.h: match name used in linux.

2003-04-15  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml: small english fixes

2003-04-14  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c:
	* dae/opd_proc.c:
	* dae/oprofiled.c:
	* utils/opcontrol:
	* doc/oprofile.1.in:
	* doc/oprofile.xml: handle --no-vmlinux

	* daemon/opd_kernel.c: use /no-vmlinux not /no-vmlinux when user
	  specify --no-vmlinux

2003-04-08  John Levon  <levon@movementarian.org>

	* HACKING: describe what happens with oprofile-www

2003-04-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: check for #717720 and direct user to
	  FAQ if detected. Note than we don't detect all symptom of this bug.

2003-04-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_exception.h: op_runtime_error is no longer abstract

	* libregex/op_regex.h: comment and tidy
	* libregex/op_regex.cpp: tidy

2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_to_source.cpp: make each line be prefixed with the samples
	counts. It was too hard to find samples inside prevous format.

2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: work around for gcc 2.95
	* p/op_to_source.cpp: minor cleanup

2003-04-07  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: cheat a bit to get